# cmake-qt5-starter

./: .gitignore  CMakeLists.txt  cmake-integration-demo.pro
gui/: MainWindow.ui
src/: CMakeLists.txt  MainWindow.cpp
